Replace use of HtmlDocletWriter with new code. Support @link to documented entities.